# scaling-llms

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini  remote_run_config.yaml
configs/: dev_pod_orchestrator.yaml  dev_run_experiments.yaml  pod_orchestrator.yaml  run_experiments.yaml  runtime_configs.yaml
configs/experiments/: local_test.yaml  rclone_sync_test.yaml
configs/runpod/: config.yaml
configs/runtime/: pod_orchestrator_dev.yaml  pod_orchestrator_training.yaml  run_experiments.yaml  run_experiments_dev.yaml
configs/wikitext_103_ablations/: constants.py  one_dim_screening.py
docs/: training_run_design_doc.md
notebooks/: batch_size_tests.ipynb  dev.ipynb  mup_test.ipynb  mup_test_dev.ipynb  run_pod_orch.ipynb  test.ipynb  test_run.ipynb
scripts/: bootstrap.sh  bootstrap_runpod.sh  colab_setup.py  docker_entrypoint.sh  docker_entrypoint_dev.sh  env_setup.py  macos_setup.sh  run_experiment_group.py  run_experiments.py  run_remote_experiments.py  setup_runpod_host.sh  tmux_job_template.sh
src/notebook_utils/: display.py  metrics.py  rclone_mount.py
src/runpod_orchestrator/: README.md  __init__.py  cli.py  config.py  exceptions.py  launcher.py  lifecycle.py  models.py  orchestrator.py  pod_spec.yaml  provision.py  run_orchestrator.py  smoke_check.py  specs.py  ssh.py  workflows.py
src/scaling_llms/: constants.py  data.py  data_old.py  distributed.py  experiments.py  inference.py  models.py  registries.py  trainer.py
tests/: conftest.py
tests/integration/: conftest.py  test_config.py  (+5 more)
(+105 files in other folders)
